Use ImmutableSet and ImmutableMap